--- a/new-server/package.json
+++ b/new-server/package.json
@@ -3,16 +3,28 @@
   "version": "0.0.3",
   "license": "ISC",
   "repository": "https://github.com/probot/smee.git",
+  "main": "build/src",
   "scripts": {
-    "dev": "tsc -w"
+    "start": "node ./build/src",
+    "dev": "tsc -w",
+    "check": "gts check",
+    "clean": "gts clean",
+    "compile": "tsc -p .",
+    "fix": "gts fix",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run check"
   },
   "dependencies": {
+    "connect-sse": "^1.2.0",
     "express": "^4.16.3"
   },
   "engines": {
     "node": "8.x"
   },
   "devDependencies": {
+    "@types/express": "^4.11.1",
+    "gts": "^0.5.4",
     "tslint": "^5.9.1",
     "typescript": "^2.7.2"
   }
